--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
         "trireme": "^0.9.0",
         "uglify-js": "^3.3.0",
         "uglifyjs-webpack-plugin": "^1.0.0",
-        "webpack": ">= 3.10.0"
+        "webpack": ">= 3.10.0",
+        "jsdoc2": "2.4.0"
     },
     "scripts": {
         "test": "ant test",
         "build.web": "webpack -p",
-        "watch": "webpack --watch",
-        "babel": "babel --presets es2015 lib/ilibdata-webpack-loader.js -o output/js/ilibdata-webpack-loader.bundle.js"
+        "watch": "webpack --watch"
     }
 }
