--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "uglify-js": "^3.3.0",
         "uglifyjs-webpack-plugin": "^1.0.0",
         "webpack": ">= 3.10.0",
+        "webpack-cli": "^2.0.0",
         "jsdoc2": "2.4.0"
     },
     "scripts": {
