--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "4"
   - "6"
   - "8"
+  - "9"
 env:
   - CXX=g++-4.8
 install:
@@ -14,4 +14,4 @@ branches:
     - master
     - development
 sudo: required
-dist: precise
+dist: trusty
