--- a/qt/build.properties
+++ b/qt/build.properties
@@ -15,8 +15,9 @@
 # 
 
 # Where is your Qt installed?
-QTDIR=/home/goun/Qt5.6.0/5.6
+#QTDIR=/home/goun/Qt5.6.0/5.6
 
 
 # modify this for your platform
-QTBIN=/home/goun/Qt5.6.0/5.6/gcc_64/bin
+#QTBIN=/home/goun/Qt5.6.0/5.6/gcc_64/bin
+QTBIN=/opt/qt55/bin
