--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ before_install:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
 install:
-  - sudo apt-get -y install qt55[QTPACKAGE]
+  #- sudo apt-get -y install qt55[QTPACKAGE]
+  - sudo apt-get install qt5-default
   - npm install
 script:
-  - source /opt/qt55/bin/qt55-env.sh
+  #- source /opt/qt55/bin/qt55-env.sh
   - ant test
 branches:
   only:
