--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,19 @@ node_js:
 env:
   - CXX=g++-4.8
 before_install:
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
+  #- sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+  #- sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  #- sudo apt-get update -qq
+  - sudo add-apt-repository ppa:beineri/opt-qt58-trusty -y
+  - sudo apt-get update
 install:
   #- sudo apt-get -y install qt55[QTPACKAGE]
-  - sudo apt-get install qt5-default
+  #- sudo apt-get install qt5-default
+  - sudo apt-get install qt58base qt58svg qt58charts-no-lgpl qt58xmlpatterns
+  - source /opt/qt58/bin/qt58-env.sh
   - npm install
 script:
-  #- source /opt/qt55/bin/qt55-env.sh
+  - source /opt/qt55/bin/qt55-env.sh
   - ant test
 branches:
   only:
