--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 before_install:
   # Qt5
   - sudo apt-get clean
-  - sudo add-apt-repository ppa:beineri/opt-qt562-trusty
+  - sudo add-apt-repository -y ppa:beineri/opt-qt562-trusty
   - sudo apt-get update
 
 install:
