--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,19 @@ node_js:
 env:
   - CXX=g++-4.8
 before_install:
-  #- sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
-  #- sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  #- sudo apt-get update -qq
-  - sudo add-apt-repository ppa:beineri/opt-qt58-trusty -y
-  #- sudo apt-get update
+  # Qt
+  - sudo apt-add-repository --yes ppa:beineri/opt-qt551-trusty
+  - sudo apt-get -qq update
 install:
-  #- sudo apt-get -y install qt55[QTPACKAGE]
-  #- sudo apt-get install qt5-default
-  - sudo apt-get install qt58base qt58svg qt58charts-no-lgpl qt58xmlpatterns
-  - source /opt/qt58/bin/qt58-env.sh
+  # Qt
+  - yes | sudo apt-get install --yes qt55base qt55imageformats qt55svg qtdeclarative5-dev
+  
   - npm install
+before_script:
+  - QTDIR="/opt/qt56"
+  - QTBIN="/opt/qt56/bin"
+  - PATH="$QTDIR/bin:$PATH"
+  - source /opt/qt55/bin/qt55-env.sh
 script:
   - source /opt/qt55/bin/qt55-env.sh
   - ant test
@@ -25,4 +27,4 @@ branches:
     - master
     - development
 sudo: required
-dist: precise
+#dist: precise
