--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt-get -qq update
 install:
   # Qt
-  - yes | sudo apt-get install --yes qt55base qt55imageformats qt55svg qtdeclarative5-dev
+  - yes | sudo apt-get install --yes qt55base qt55imageformats qt55svg qtdeclarative5-dev qt5-qmake
   
   - npm install
 before_script:
