--- a/qt/build.properties
+++ b/qt/build.properties
@@ -16,8 +16,8 @@
 
 # Where is your Qt installed?
 #QTDIR=/home/goun/Qt5.6.0/5.6
-
+QTDIR="/opt/qt56
 
 # modify this for your platform
 #QTBIN=/home/goun/Qt5.6.0/5.6/gcc_64/bin
-QTBIN=/opt/qt58/bin
+QTBIN="/opt/qt56/bin
