--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - source /opt/qt55/bin/qt55-env.sh
 script:
   - source /opt/qt55/bin/qt55-env.sh
+  - which qmake
   - ant test
 branches:
   only:
