--- a/qt/build.properties
+++ b/qt/build.properties
@@ -16,7 +16,7 @@
 
 # Where is your Qt installed?
 #QTDIR=/home/goun/Qt5.6.0/5.6
-#iQTDIR="/opt/qt56
+QTDIR=/opt/qt55
 
 # modify this for your platform
 #QTBIN=/home/goun/Qt5.6.0/5.6/gcc_64/bin
